[package]
name = "_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.26"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.91"
tokio = {version="1.25.0", features=["full"]}
